Search API 1.x, dev (xxxx-xx-xx):
---------------------------------
- #2884451 by drunken monkey: Fixed missing primary key for denormalized index
  tables in DB backend.
- #2886978 by drunken monkey: Fixed tracking of entities in disabled languages.

Search API 1.2 (2017-06-25):
----------------------------
- #2881198 by jzavrl, drunken monkey, borisson_: Added property paths to "Add
  fields" form.
- #2883475 by Matthijs, drunken monkey, borisson_: Added support for "Language
  not applicable".
- #2883807 by LammensJ, drunken monkey: Fixed warning in Views UI for
  contextual filters.
- #2880239 by acbramley, drunken monkey, borisson_: Fixed logic for multiple
  sorts on the same field.
- #2889426 by drunken monkey: Fixed test fails for latest Core changes.
- #2884720 by blake.thompson: Added a display plugin for the Views Embed
  display type.
- #2882347 by mkalkbrenner: Fixed forms to not have unserializable properties.
- #2676468 by acbramley, drunken monkey, borisson_: Fixed stale cache in search
  view with tag-based caching.
- #2876398 by drunken monkey: Fixed operator description of Views "Fulltext
  search" filter.
- #2881945 by drunken monkey: Removed unnecessary check in
  AddURL::addFieldValues().
- #2886981 by drunken monkey: Fixed test fails for latest Core changes.
- #2880026 by Anton4yk, drunken monkey: Fixed bugs in entity datasource's item
  discovery code for edge cases.
- #2881631 by jzavrl, drunken monkey, borisson_: Added alphabetic sort for
  properties in "Add fields" form.
- #2867809 by drunken monkey, borisson_: Added an option to enable a processor
  for all compatible fields.
- #2878974 by acbramley: Added the date Views argument plugin.
- #2840274 by drunken monkey, borisson_: Updated the Core dependency to 8.3.
- #2874895 by harsha012, drunken monkey, borisson_: Fixed OOP code to use the
  t() method instead of the global t() function.
- #2624876 by drunken monkey, borisson_: Added a query option for "properties
  to retrieve".